--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ mysqlProperties.password=
 postgresProperties.url=jdbc:postgres://127.0.0.1:3306/
 postgresProperties.username=postgres
 postgresProperties.password=
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+logging.level.org.springframework: TRACE
+logging.level.com: TRACE
