Display tables metadata + backend refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ mysqlProperties.url=jdbc:mysql://127.0.0.1:3306/
 mysqlProperties.username=root
 mysqlProperties.password=
 
-postgresProperties.url=jdbc:postgres://127.0.0.1:3306/
-postgresProperties.username=postgres
-postgresProperties.password=
-
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 logging.level.org.springframework: TRACE
 logging.level.com: TRACE
+
+sql.query.all=select * from 
+sql.query.information=SELECT table_name, table_type, engine, version, table_rows, avg_row_length, create_time, table_collation FROM information_schema.tables WHERE table_schema='
+sql.query.information.order=' ORDER BY table_name
