--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ logging.level.org.springframework: TRACE
 logging.level.com: TRACE
 
 sql.query.all=select * from 
-sql.query.information=SELECT table_name, table_type, engine, version, table_rows, avg_row_length, create_time, table_collation FROM information_schema.tables WHERE table_schema='
+sql.query.information=SELECT table_name, table_type, engine, table_rows, avg_row_length, create_time FROM information_schema.tables WHERE table_schema='
 sql.query.information.order=' ORDER BY table_name
